<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sub_page_color"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/constraint_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:outlineAmbientShadowColor="@color/shadow_color"
                android:outlineSpotShadowColor="@color/shadow_color"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/input_constraint"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/input_card"
                    android:padding="@dimen/_15sdp"
                    app:layout_constraintTop_toBottomOf="@+id/toolbar">

                    <TextView
                        android:id="@+id/text_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/latobold"
                        android:gravity="center"
                        android:text="@string/input_value"
                        android:textColor="@color/text_label"
                        android:textSize="18sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/gender_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/latosemibold"
                        android:gravity="start"
                        android:paddingTop="@dimen/_20sdp"
                        android:text="@string/select_gender"
                        android:textColor="@color/text_label"
                        android:textSize="15sp"
                        app:layout_constraintTop_toBottomOf="@+id/text_label" />


                    <RadioGroup
                        android:layout_marginTop="@dimen/_10sdp"
                        android:id="@+id/radio_gp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toBottomOf="@+id/gender_text">

                        <RadioButton
                            android:id="@+id/male"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/male"
                            android:textSize="15sp"
                            android:fontFamily="@font/latoregular"
                            android:textColor="@color/textColor"
                            android:buttonTint="@color/radio_btn_color"
                            />

                        <RadioButton
                            android:id="@+id/female"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/female"
                            android:textSize="15sp"
                            android:fontFamily="@font/latoregular"
                            android:textColor="@color/textColor"
                            android:buttonTint="@color/radio_btn_color"/>

                    </RadioGroup>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/initial_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeWidthFocused="1dp"
                        android:layout_marginTop="@dimen/_10sdp"
                         android:textColorHint="@color/text_hint_color"
                        app:boxBackgroundColor="@color/bg_edit_color"
                        app:layout_constraintTop_toBottomOf="@+id/radio_gp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/age"
                            android:inputType="number"
                            android:maxLines="1"
                            android:fontFamily="@font/latoregular"
                            android:textSize="15sp"
                            android:textColor="@color/textColor"
                            android:textColorHint="@color/text_hint_color" />


                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/second_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeWidthFocused="1dp"
                        android:layout_marginTop="@dimen/_10sdp"
                         android:textColorHint="@color/text_hint_color"
                        app:boxBackgroundColor="@color/bg_edit_color"
                        app:layout_constraintTop_toBottomOf="@+id/initial_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/height_cm"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textSize="15sp"
                            android:fontFamily="@font/latoregular"
                            android:textColor="@color/textColor"
                            android:textColorHint="@color/text_hint_color" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/third_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        app:boxStrokeWidthFocused="1dp"
                         android:textColorHint="@color/text_hint_color"
                        app:boxBackgroundColor="@color/bg_edit_color"
                        app:layout_constraintTop_toBottomOf="@+id/second_layout">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/waist"
                            android:inputType="number"
                            android:maxLines="1"
                            android:textSize="15sp"
                            android:fontFamily="@font/latoregular"
                            android:textColor="@color/textColor"
                            android:textColorHint="@color/text_hint_color" />


                    </com.google.android.material.textfield.TextInputLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/third_layout">

                        <TextView
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:id="@+id/clear_c2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:background="@drawable/button_bg"
                            android:fontFamily="@font/latomedium"
                            android:gravity="center"
                            android:paddingTop="@dimen/_7sdp"
                            android:paddingBottom="@dimen/_7sdp"
                            android:text="@string/clear"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="15sp" />

                        <TextView
                            android:foreground="?attr/selectableItemBackgroundBorderless"
                            android:id="@+id/calculate_c1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_10sdp"
                            android:layout_marginRight="@dimen/_10sdp"
                            android:layout_weight="1"
                            android:background="@drawable/button_bg"
                            android:fontFamily="@font/latomedium"
                            android:gravity="center"
                            android:paddingTop="@dimen/_7sdp"
                            android:paddingBottom="@dimen/_7sdp"
                            android:singleLine="true"
                            android:text="@string/calculate"
                            android:textAllCaps="false"
                            android:textColor="@color/white"
                            android:textSize="15sp" />
                    </LinearLayout>


                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/constraint_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_5sdp"
                android:layout_marginRight="@dimen/_5sdp"
                android:outlineAmbientShadowColor="@color/shadow_color"
                android:outlineSpotShadowColor="@color/shadow_color"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_10sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/constraint_input">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/input_card"
                    android:padding="@dimen/_15sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/input_constraint">

                    <TextView
                        android:id="@+id/text_result"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/latobold"
                        android:gravity="center"
                        android:text="@string/result"
                        android:textColor="@color/text_label"
                        android:textSize="18sp"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/final_layout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:boxStrokeWidthFocused="1dp"
                        android:layout_marginTop="@dimen/_15sdp"
                        app:layout_constraintTop_toBottomOf="@+id/text_result">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/edt4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:clickable="false"
                            android:editable="false"
                            android:focusable="true"
                            app:boxBackgroundColor="@color/bg_edit_color"
                            android:textSize="15sp"
                            android:fontFamily="@font/latoregular"
                            android:hint="@string/body_fat"
                            android:textColor="@color/textColor"
                            android:textColorHint="@color/text_hint_color" />

                    </com.google.android.material.textfield.TextInputLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>



        </LinearLayout>
    </ScrollView>
</LinearLayout>